tools/main_stubs.h

/* Avoid fortified libc wrappers that zig translate-c cannot handle */
int printf(const char *fmt, ...);
int snprintf(char *buf, unsigned long n, const char *fmt, ...);
int fprintf(void *f, const char *fmt, ...);
char *getenv(const char *name);
void free(void *p);
void *malloc(unsigned long n);
void *memcpy(void *d, const void *s, unsigned long n);
void *memset(void *s, int c, unsigned long n);
int strcmp(const char *a, const char *b);
unsigned long strlen(const char *s);
char *strstr(const char *h, const char *n);
char *strcpy(char *d, const char *s);
typedef int64_t off_t;
typedef int64_t time_t;
typedef uint64_t ino_t;
typedef unsigned int mode_t;
typedef void FILE;
extern FILE *stdin;
extern FILE *stderr;
int fileno(FILE *f);
int isatty(int fd);
int fclose(FILE *f);
FILE *freopen(const char *path, const char *mode, FILE *stream);
int atexit(void (*func)(void));
time_t time(time_t *t);
/* Darwin/macOS arm64 struct stat (size 144) */
struct timespec_joe {
	time_t tv_sec;
	long tv_nsec;
};
struct stat {
	unsigned int st_dev;		/* 0 */
	unsigned short st_mode;		/* 4 */
	unsigned short st_nlink;	/* 6 */
	ino_t st_ino;			/* 8 */
	unsigned int st_uid;		/* 16 */
	unsigned int st_gid;		/* 20 */
	unsigned int st_rdev;		/* 24 */
	unsigned int _pad_rdev;		/* 28 */
	struct timespec_joe st_atimespec; /* 32 */
	struct timespec_joe st_mtimespec; /* 48 */
	struct timespec_joe st_ctimespec; /* 64 */
	struct timespec_joe st_birthtimespec; /* 80 */
	int64_t st_size;		/* 96 */
	int64_t st_blocks;		/* 104 */
	int st_blksize;			/* 112 */
	unsigned int st_flags;		/* 116 */
	unsigned int st_gen;		/* 120 */
	int st_lspare;			/* 124 */
	int64_t st_qspare[2];		/* 128 */
};
int stat(const char *path, struct stat *buf);
struct b;
 typedef struct b B;
struct p;
 typedef struct p P;
struct kbd;
 typedef struct kbd KBD;
struct kmap;
 typedef struct kmap KMAP;
struct bstack;
struct window;
 typedef struct window W;
struct screen;
 typedef struct screen Screen;
struct bw;
 typedef struct bw BW;
struct macro;
 typedef struct macro MACRO;
struct cmd;
 typedef struct cmd CMD;
struct charmap;
struct cap;
 typedef struct cap CAP;
struct jfile;
 typedef struct jfile JFILE;
struct vt_context;
 typedef struct vt_context VT;
struct vfile;
 typedef struct vfile VFILE;
struct base;
 typedef struct base BASE;
struct cmd {
	const char *name;
	int flag;
	int (*func)(W *w, int k);
	MACRO *m;
	int arg;
	const char *negarg;
};
struct macro {
	ptrdiff_t what;
	int k;
	int flg;
	const CMD *cmd;
	ptrdiff_t n;
	ptrdiff_t size;
	MACRO **steps;
};
struct watom {
	const char *context;
	void (*disp)(W *w, int flg);
	void (*follow)(W *w);
	int (*abort)(W *w);
	int (*rtn)(W *w);
	int (*type)(W *w, int k);
	void (*resize)(W *w, ptrdiff_t width, ptrdiff_t height);
	void (*move)(W *w, ptrdiff_t x, ptrdiff_t y);
	void (*ins)(W *w, B *b, off_t l, off_t n, int flg);
	void (*del)(W *w, B *b, off_t l, off_t n, int flg);
	int what;
};
typedef struct watom WATOM;
struct scrn {
	char _pad0[8];
	ptrdiff_t li;
	ptrdiff_t co;
	char _pad1[760];
	int *updtab;
	char _pad2[48];
};
typedef struct scrn SCRN;
struct screen {
	SCRN *t;
	ptrdiff_t wind;
	W *topwin;
	W *curwin;
	ptrdiff_t w, h;
};
struct window {
	LINK(W) link;
	Screen *t;
	ptrdiff_t x, y, w, h;
	ptrdiff_t ny, nh;
	ptrdiff_t reqh;
	ptrdiff_t fixed;
	ptrdiff_t hh;
	W *win;
	W *main;
	W *orgwin;
	ptrdiff_t curx, cury;
	KBD *kbd;
	const WATOM *watom;
	void *object;
	const char *msgt;
	const char *msgb;
	const char *huh;
	int *notify;
	struct bstack *bstack;
};
struct base {
	W *parent;
};
struct options {
	struct options *next;
	const char *ftype;
	void *match;
	int overtype;
	off_t lmargin;
	off_t rmargin;
	int autoindent;
	int wordwrap;
	int nobackup;
	char _pad_tab[4];
	off_t tab;
	int indentc;
	char _pad_istep[4];
	off_t istep;
	const char *context;
	const char *lmsg;
	const char *rmsg;
	const char *smsg;
	const char *zmsg;
	int linums;
	int hiline;
	int readonly;
	int french;
	int flowed;
	int spaces;
	int crlf;
	int highlight;
	int visiblews;
	int syntax_debug;
	const char *syntax_name;
	struct high_syntax *syntax;
	const char *map_name;
	struct charmap *charmap;
	const char *language;
	int smarthome;
	int indentfirst;
	int smartbacks;
	int purify;
	int picture;
	int highlighter_context;
	int single_quoted;
	int no_double_quoted;
	int c_comment;
	int cpp_comment;
	int hash_comment;
	int vhdl_comment;
	int semi_comment;
	int tex_comment;
	int hex;
	int viewmode;
	int ansi;
	int title;
	const char *text_delimiters;
	const char *cpara;
	const char *cnotpara;
	MACRO *mnew;
	MACRO *mold;
	MACRO *msnew;
	MACRO *msold;
	MACRO *mfirst;
};
typedef struct options OPTIONS;
struct p {
	LINK(P) link;
	B *b;
	char _pad0[24];
	off_t byte;
	off_t line;
	off_t col;
	off_t xcol;
	int valcol;
	int end;
	int attr;
	int valattr;
	P **owner;
	const char *tracker;
};
typedef int pid_t;
struct utf8_sm {
	char buf[8];
	ptrdiff_t ptr;
	int state;
	int accu;
};
enum vt_state {
	vt_idle,
	vt_esc,
	vt_args,
	vt_cmd,
	vt_utf,
	vt_osc,
	vt_osce
};
struct vt_context {
	enum vt_state state;
	char buf[1024];
	ptrdiff_t bufx;
	ptrdiff_t argv[3];
	ptrdiff_t argc;
	P *top;
	ptrdiff_t height;
	ptrdiff_t width;
	ptrdiff_t regn_top;
	ptrdiff_t regn_bot;
	P *vtcur;
	B *b;
	KBD *kbd;
	int attr;
	struct utf8_sm utf8_sm;
};
/* Layout mirrors gapbuffer/types.zig B (size 632) */
struct b {
	LINK(B) link;
	P *bof;
	P *eof;
	char *name;
	char _pad1[36];
	int orphan;
	int count;
	int changed;
	int backup;
	char _pad_backup[4];
	void *undo;
	char _pad_marks[88];
	OPTIONS o;
	P *oldcur;
	P *oldtop;
	P *err;
	char *current_dir;
	int shell_flag;
	int rdonly;
	int internal;
	int scratch;
	int er;
	pid_t pid;
	int out;
	VT *vt;
	int raw;
	char _pad_raw[4];
	void *db;
	void (*parseone)(struct charmap *map, const char *s, char **rtn_name, off_t *rtn_line);
};
struct bw {
	W *parent;
	B *b;
	P *top;
	P *cursor;
	off_t offset;
	Screen *t;
	ptrdiff_t h, w, x, y;
	OPTIONS o;
	void *object;
	int lincols;
	off_t curlin;
	int top_changed;
	struct lattr_db *db;
	int shell_flag;
	int pasting;
	int last_viewmode;
	struct { int ww, ai, sp; } saved;
};
struct kbd {
	KMAP *curmap;
	KMAP *topmap;
	int seq[16];
	ptrdiff_t x;
};
struct charmap {
	void *next;
	const char *name;
	int type;
	char _pad_type[4];
	int (*is_punct)(struct charmap *map, int c);
	int (*is_print)(struct charmap *map, int c);
	int (*is_space)(struct charmap *map, int c);
	int (*is_alpha_)(struct charmap *map, int c);
	int (*is_alnum_)(struct charmap *map, int c);
	int (*to_lower)(struct charmap *map, int c);
	int (*to_upper)(struct charmap *map, int c);
	char _pad[2684];
};
/* --- callees used by main.c --- */
ptrdiff_t slen(const char *s);
char *zdup(const char *s);
char *zlcpy(char *a, ptrdiff_t siz, const char *b);
long ztoi(const char *s);
off_t ztoo(const char *s);
char *vsncpy(char *s, ptrdiff_t len, const char *blk, ptrdiff_t blklen);
char *vstrunc(char *s, ptrdiff_t len);
CAP *my_getcap(char *name, long baud, void (*out)(void *outptr, char c), void *outptr);
extern int orphan;