src/main.zig


pub extern fn printf(fmt: [*c]const u8, ...) c_int;
pub extern fn snprintf(buf: [*c]u8, n: c_ulong, fmt: [*c]const u8, ...) c_int;
pub extern fn fprintf(f: ?*anyopaque, fmt: [*c]const u8, ...) c_int;
pub extern fn getenv(name: [*c]const u8) [*c]u8;
pub extern fn free(p: ?*anyopaque) void;
pub extern fn malloc(n: c_ulong) ?*anyopaque;
pub extern fn memcpy(d: ?*anyopaque, s: ?*const anyopaque, n: c_ulong) ?*anyopaque;
pub extern fn memset(s: ?*anyopaque, c: c_int, n: c_ulong) ?*anyopaque;
pub extern fn strcmp(a: [*c]const u8, b: [*c]const u8) c_int;
pub extern fn strlen(s: [*c]const u8) c_ulong;
pub extern fn strstr(h: [*c]const u8, n: [*c]const u8) [*c]u8;
pub extern fn strcpy(d: [*c]u8, s: [*c]const u8) [*c]u8;
pub const off_t = i64;
pub const time_t = i64;
pub const ino_t = u64;
pub const mode_t = c_uint;
pub const FILE = anyopaque;
// Darwin exposes stdin/stdout/stderr as __stdinp/__stdoutp/__stderrp.
pub extern var __stdinp: ?*FILE;
pub extern var __stderrp: ?*FILE;
pub extern fn fileno(f: ?*FILE) c_int;
pub extern fn isatty(fd: c_int) c_int;
pub extern fn fclose(f: ?*FILE) c_int;
pub extern fn freopen(path: [*c]const u8, mode: [*c]const u8, stream: ?*FILE) ?*FILE;
pub extern fn atexit(func: ?*const fn () callconv(.c) void) c_int;
pub extern fn time(t: [*c]time_t) time_t;
pub const struct_timespec_joe = extern struct {
    tv_sec: time_t = 0,
    tv_nsec: c_long = 0,
};
pub const struct_stat = extern struct {
    st_dev: c_uint = 0,
    st_mode: c_ushort = 0,
    st_nlink: c_ushort = 0,
    st_ino: ino_t = 0,
    st_uid: c_uint = 0,
    st_gid: c_uint = 0,
    st_rdev: c_uint = 0,
    _pad_rdev: c_uint = 0,
    st_atimespec: struct_timespec_joe = std.mem.zeroes(struct_timespec_joe),
    st_mtimespec: struct_timespec_joe = std.mem.zeroes(struct_timespec_joe),
    st_ctimespec: struct_timespec_joe = std.mem.zeroes(struct_timespec_joe),
    st_birthtimespec: struct_timespec_joe = std.mem.zeroes(struct_timespec_joe),
    st_size: i64 = 0,
    st_blocks: i64 = 0,
    st_blksize: c_int = 0,
    st_flags: c_uint = 0,
    st_gen: c_uint = 0,
    st_lspare: c_int = 0,
    st_qspare: [2]i64 = std.mem.zeroes([2]i64),
};
pub extern fn stat(path: [*c]const u8, buf: [*c]struct_stat) c_int;
pub const B = struct_b;
const struct_unnamed_1 = extern struct {
    next: [*c]B = null,
    prev: [*c]B = null,
};
const struct_unnamed_2 = extern struct {
    next: [*c]P = null,
    prev: [*c]P = null,
};
pub const struct_p = extern struct {
    link: struct_unnamed_2 = std.mem.zeroes(struct_unnamed_2),
    b: [*c]B = null,
    _pad0: [24]u8 = std.mem.zeroes([24]u8),
    byte: off_t = 0,
    line: off_t = 0,
    col: off_t = 0,
    xcol: off_t = 0,
    valcol: c_int = 0,
    end: c_int = 0,
    attr: c_int = 0,
    valattr: c_int = 0,
    owner: [*c][*c]P = null,
    tracker: [*c]const u8 = null,
};
pub const P = struct_p;
pub const struct_high_syntax = opaque {};
pub const struct_charmap = extern struct {
    next: ?*anyopaque = null,
    name: [*c]const u8 = null,
    type: c_int = 0,
    _pad_type: [4]u8 = std.mem.zeroes([4]u8),
    is_punct: ?*const fn (map: [*c]struct_charmap, c: c_int) callconv(.c) c_int = null,
    is_print: ?*const fn (map: [*c]struct_charmap, c: c_int) callconv(.c) c_int = null,
    is_space: ?*const fn (map: [*c]struct_charmap, c: c_int) callconv(.c) c_int = null,
    is_alpha_: ?*const fn (map: [*c]struct_charmap, c: c_int) callconv(.c) c_int = null,
    is_alnum_: ?*const fn (map: [*c]struct_charmap, c: c_int) callconv(.c) c_int = null,
    to_lower: ?*const fn (map: [*c]struct_charmap, c: c_int) callconv(.c) c_int = null,
    to_upper: ?*const fn (map: [*c]struct_charmap, c: c_int) callconv(.c) c_int = null,
    _pad: [2684]u8 = std.mem.zeroes([2684]u8),
};
const struct_unnamed_3 = extern struct {
    next: [*c]W = null,
    prev: [*c]W = null,
};
pub const struct_scrn = extern struct {
    _pad0: [8]u8 = std.mem.zeroes([8]u8),
    li: ptrdiff_t = 0,
    co: ptrdiff_t = 0,
    _pad1: [760]u8 = std.mem.zeroes([760]u8),
    updtab: [*c]c_int = null,
    _pad2: [48]u8 = std.mem.zeroes([48]u8),
};
pub const SCRN = struct_scrn;
pub const struct_screen = extern struct {
    t: [*c]SCRN = null,
    wind: ptrdiff_t = 0,
    topwin: [*c]W = null,
    curwin: [*c]W = null,
    w: ptrdiff_t = 0,
    h: ptrdiff_t = 0,
};
pub const Screen = struct_screen;
pub const struct_kmap = opaque {
};
pub const KMAP = struct_kmap;
pub const struct_kbd = extern struct {
    curmap: ?*KMAP = null,
    topmap: ?*KMAP = null,
    seq: [16]c_int = std.mem.zeroes([16]c_int),
    x: ptrdiff_t = 0,
};
pub const KBD = struct_kbd;
pub const struct_watom = extern struct {
    context: [*c]const u8 = null,
    disp: ?*const fn (w: [*c]W, flg: c_int) callconv(.c) void = null,
    follow: ?*const fn (w: [*c]W) callconv(.c) void = null,
    abort: ?*const fn (w: [*c]W) callconv(.c) c_int = null,
    rtn: ?*const fn (w: [*c]W) callconv(.c) c_int = null,
    type: ?*const fn (w: [*c]W, k: c_int) callconv(.c) c_int = null,
    resize: ?*const fn (w: [*c]W, width: ptrdiff_t, height: ptrdiff_t) callconv(.c) void = null,
    move: ?*const fn (w: [*c]W, x: ptrdiff_t, y: ptrdiff_t) callconv(.c) void = null,
    ins: ?*const fn (w: [*c]W, b: [*c]B, l: off_t, n: off_t, flg: c_int) callconv(.c) void = null,
    del: ?*const fn (w: [*c]W, b: [*c]B, l: off_t, n: off_t, flg: c_int) callconv(.c) void = null,
    what: c_int = 0,
};
pub const WATOM = struct_watom;
pub const struct_bstack = opaque {};
pub const struct_window = extern struct {
    link: struct_unnamed_3 = std.mem.zeroes(struct_unnamed_3),
    t: [*c]Screen = null,
    x: ptrdiff_t = 0,
    y: ptrdiff_t = 0,
    w: ptrdiff_t = 0,
    h: ptrdiff_t = 0,
    ny: ptrdiff_t = 0,
    nh: ptrdiff_t = 0,
    reqh: ptrdiff_t = 0,
    fixed: ptrdiff_t = 0,
    hh: ptrdiff_t = 0,
    win: [*c]W = null,
    main: [*c]W = null,
    orgwin: [*c]W = null,
    curx: ptrdiff_t = 0,
    cury: ptrdiff_t = 0,
    kbd: [*c]KBD = null,
    watom: [*c]const WATOM = null,
    object: ?*anyopaque = null,
    msgt: [*c]const u8 = null,
    msgb: [*c]const u8 = null,
    huh: [*c]const u8 = null,
    notify: [*c]c_int = null,
    bstack: ?*struct_bstack = null,
};
pub const W = struct_window;
pub const struct_cmd = extern struct {
    name: [*c]const u8 = null,
    flag: c_int = 0,
    func: ?*const fn (w: [*c]W, k: c_int) callconv(.c) c_int = null,
    m: [*c]MACRO = null,
    arg: c_int = 0,
    negarg: [*c]const u8 = null,
};
pub const CMD = struct_cmd;
pub const struct_macro = extern struct {
    what: ptrdiff_t = 0,
    k: c_int = 0,
    flg: c_int = 0,
    cmd: [*c]const CMD = null,
    n: ptrdiff_t = 0,
    size: ptrdiff_t = 0,
    steps: [*c][*c]MACRO = null,
};
pub const MACRO = struct_macro;
pub const struct_options = extern struct {
    next: [*c]struct_options = null,
    ftype: [*c]const u8 = null,
    match: ?*anyopaque = null,
    overtype: c_int = 0,
    lmargin: off_t = 0,
    rmargin: off_t = 0,
    autoindent: c_int = 0,
    wordwrap: c_int = 0,
    nobackup: c_int = 0,
    _pad_tab: [4]u8 = std.mem.zeroes([4]u8),
    tab: off_t = 0,
    indentc: c_int = 0,
    _pad_istep: [4]u8 = std.mem.zeroes([4]u8),
    istep: off_t = 0,
    context: [*c]const u8 = null,
    lmsg: [*c]const u8 = null,
    rmsg: [*c]const u8 = null,
    smsg: [*c]const u8 = null,
    zmsg: [*c]const u8 = null,
    linums: c_int = 0,
    hiline: c_int = 0,
    readonly: c_int = 0,
    french: c_int = 0,
    flowed: c_int = 0,
    spaces: c_int = 0,
    crlf: c_int = 0,
    highlight: c_int = 0,
    visiblews: c_int = 0,
    syntax_debug: c_int = 0,
    syntax_name: [*c]const u8 = null,
    syntax: ?*struct_high_syntax = null,
    map_name: [*c]const u8 = null,
    charmap: [*c]struct_charmap = null,
    language: [*c]const u8 = null,
    smarthome: c_int = 0,
    indentfirst: c_int = 0,
    smartbacks: c_int = 0,
    purify: c_int = 0,
    picture: c_int = 0,
    highlighter_context: c_int = 0,
    single_quoted: c_int = 0,
    no_double_quoted: c_int = 0,
    c_comment: c_int = 0,
    cpp_comment: c_int = 0,
    hash_comment: c_int = 0,
    vhdl_comment: c_int = 0,
    semi_comment: c_int = 0,
    tex_comment: c_int = 0,
    hex: c_int = 0,
    viewmode: c_int = 0,
    ansi: c_int = 0,
    title: c_int = 0,
    text_delimiters: [*c]const u8 = null,
    cpara: [*c]const u8 = null,
    cnotpara: [*c]const u8 = null,
    mnew: [*c]MACRO = null,
    mold: [*c]MACRO = null,
    msnew: [*c]MACRO = null,
    msold: [*c]MACRO = null,
    mfirst: [*c]MACRO = null,
};
pub const OPTIONS = struct_options;
pub const pid_t = c_int;
pub const vt_idle: c_int = 0;
pub const vt_esc: c_int = 1;
pub const vt_args: c_int = 2;
pub const vt_cmd: c_int = 3;
pub const vt_utf: c_int = 4;
pub const vt_osc: c_int = 5;
pub const vt_osce: c_int = 6;
pub const enum_vt_state = c_uint;
pub const struct_utf8_sm = extern struct {
    buf: [8]u8 = std.mem.zeroes([8]u8),
    ptr: ptrdiff_t = 0,
    state: c_int = 0,
    accu: c_int = 0,
};
pub const struct_vt_context = extern struct {
    state: enum_vt_state = std.mem.zeroes(enum_vt_state),
    buf: [1024]u8 = std.mem.zeroes([1024]u8),
    bufx: ptrdiff_t = 0,
    argv: [3]ptrdiff_t = std.mem.zeroes([3]ptrdiff_t),
    argc: ptrdiff_t = 0,
    top: [*c]P = null,
    height: ptrdiff_t = 0,
    width: ptrdiff_t = 0,
    regn_top: ptrdiff_t = 0,
    regn_bot: ptrdiff_t = 0,
    vtcur: [*c]P = null,
    b: [*c]B = null,
    kbd: [*c]KBD = null,
    attr: c_int = 0,
    utf8_sm: struct_utf8_sm = std.mem.zeroes(struct_utf8_sm),
};
pub const VT = struct_vt_context;
pub const struct_b = extern struct {
    link: struct_unnamed_1 = std.mem.zeroes(struct_unnamed_1),
    bof: [*c]P = null,
    eof: [*c]P = null,
    name: [*c]u8 = null,
    _pad1: [36]u8 = std.mem.zeroes([36]u8),
    orphan: c_int = 0,
    count: c_int = 0,
    changed: c_int = 0,
    backup: c_int = 0,
    _pad_backup: [4]u8 = std.mem.zeroes([4]u8),
    undo: ?*anyopaque = null,
    _pad_marks: [88]u8 = std.mem.zeroes([88]u8),
    o: OPTIONS = std.mem.zeroes(OPTIONS),
    oldcur: [*c]P = null,
    oldtop: [*c]P = null,
    err: [*c]P = null,
    current_dir: [*c]u8 = null,
    shell_flag: c_int = 0,
    rdonly: c_int = 0,
    internal: c_int = 0,
    scratch: c_int = 0,
    er: c_int = 0,
    pid: pid_t = 0,
    out: c_int = 0,
    vt: [*c]VT = null,
    raw: c_int = 0,
    _pad_raw: [4]u8 = std.mem.zeroes([4]u8),
    db: ?*anyopaque = null,
    parseone: ?*const fn (map: [*c]struct_charmap, s: [*c]const u8, rtn_name: [*c][*c]u8, rtn_line: [*c]off_t) callconv(.c) void = null,
};
pub const struct_lattr_db = opaque {};
const struct_unnamed_4 = extern struct {
    ww: c_int = 0,
    ai: c_int = 0,
    sp: c_int = 0,
};
pub const struct_bw = extern struct {
    parent: [*c]W = null,
    b: [*c]B = null,
    top: [*c]P = null,
    cursor: [*c]P = null,
    offset: off_t = 0,
    t: [*c]Screen = null,
    h: ptrdiff_t = 0,
    w: ptrdiff_t = 0,
    x: ptrdiff_t = 0,
    y: ptrdiff_t = 0,
    o: OPTIONS = std.mem.zeroes(OPTIONS),
    object: ?*anyopaque = null,
    lincols: c_int = 0,
    curlin: off_t = 0,
    top_changed: c_int = 0,
    db: ?*struct_lattr_db = null,
    shell_flag: c_int = 0,
    pasting: c_int = 0,
    last_viewmode: c_int = 0,
    saved: struct_unnamed_4 = std.mem.zeroes(struct_unnamed_4),
};
pub const BW = struct_bw;
pub const struct_cap = opaque {
};
pub const CAP = struct_cap;
pub const struct_jfile = opaque {};
pub const JFILE = struct_jfile;
pub const struct_vfile = opaque {
};
pub const VFILE = struct_vfile;
pub const struct_base = extern struct {
    parent: [*c]W = null,
};
pub const BASE = struct_base;
pub extern fn slen(s: [*c]const u8) ptrdiff_t;
pub extern fn zdup(s: [*c]const u8) [*c]u8;
pub extern fn zlcpy(a: [*c]u8, siz: ptrdiff_t, b: [*c]const u8) [*c]u8;
pub extern fn ztoi(s: [*c]const u8) c_long;
pub extern fn ztoo(s: [*c]const u8) off_t;
pub extern fn vsncpy(s: [*c]u8, len: ptrdiff_t, blk: [*c]const u8, blklen: ptrdiff_t) [*c]u8;
pub extern fn vstrunc(s: [*c]u8, len: ptrdiff_t) [*c]u8;
